--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./assets/graduation-cap.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -351,7 +351,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">pbabayen-on@usa.edu.ph</a></p>
+          <p><a href="mailto:pbabayen-on@usa.edu.ph">pbabayen-on@usa.edu.ph</a></p>
         </div>
         <div class="contact-info-container">
           <img
