--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Thepaulbabayenon'"
+                onclick="location.href='https://github.com/Thepaulbabayenon/Portfolio'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Thepaulbabayenon'"
+                onclick="location.href='https://university-of-sanagustin.netlify.app/'"
               >
                 Live Demo
               </button>
