--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Thepaulbabayenon/'"
+                onclick="location.href='https://thepaulbabayenon.github.io/gpt3-smpl/'"
               >
                 Github
               </button>
