--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://thepaulbabayenon.github.io/gpt3-smpl/'"
+                onclick="location.href='https://github.com/Thepaulbabayenon/gpt3-smpl'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Thepaulbabayenon'"
+                onclick="location.href='https://thepaulbabayenon.github.io/gpt3-smpl/'"
               >
                 Live Demo
               </button>
